Adicionando páginas HTML de contato

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>Blog Pessoal</h1>
 
     <p>
-        Meu nome é Fábio Ferreira, tenho 27 anos, apaixonado por esportes e programação, 
+        Meu nome é Fábio Ferreira, tenho 27 anos, apaixonado por esportes e programação. 
         Atualmente no último semestre do curso de Administração.
     </p>
 
