--- a/contato.html
+++ b/contato.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
-    <ul>
+    <ul id="menu">
         <li>
             <a href="index.html"> Home </a>
         </li>
@@ -17,37 +18,62 @@
         </li>
     </ul>
 
-    <h1>Entre em contato comigo</h1>
+    <h1 class="center">Entre em contato comigo</h1>
 
-    <form>
-        <label for="nome">Nome:</label> <br>
-        <input type="text" id="nome">
-        <br>
-        <br>
-        <label for="email">E-mail:</label> <br>
-        <input type="email" id="email">
-        <br>
-        <br>
-        <label for="assunto">Assunto:</label> <br>
-        <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
-        <br>
-        <br>
-        <button>Enviar</button>
-    </form>
+    <div class="container mb-50">
+        <div>
+            <form>
+                <label for="nome">Nome:</label> <br>
+                <input type="text" id="nome">
+                <br>
+                <br>
+                <label for="email">E-mail:</label> <br>
+                <input type="email" id="email">
+                <br>
+                <br>
+                <label for="assunto">Assunto:</label> <br>
+                <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
+                <br>
+                <br>
+                <button>Enviar</button>
+            </form>
+        </div>
 
-    <h2>Endereço: Shopping Morumbi</h2>
+        <div class="ml-50">
+            <h2>Endereço: Shopping Morumbi</h2>
 
-    <p>Av. Roque Petroni Júnior, 1089</p>
-    <p>Jardim das Acacias, São Paulo - SP, 04707-900</p>
+            <p>Av. Roque Petroni Júnior, 1089</p>
+            <p>Jardim das Acacias, São Paulo - SP, 04707-900</p>
 
-    <iframe 
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14621.90417849164!2d-46.70736213022461!3d-23.623116899999992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce50c350089753%3A0xdb37b760a84c0e8c!2sAv.%20Roque%20Petroni%20J%C3%BAnior%2C%201089%20-%20Jardim%20das%20Acacias%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004707-000!5e0!3m2!1spt-BR!2sbr!4v1647492824756!5m2!1spt-BR!2sbr" 
-    width="400" 
-    height="250" 
-    style="border:0;" 
-    allowfullscreen="" 
-    loading="lazy"
-    ></iframe>
+            <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14621.90417849164!2d-46.70736213022461!3d-23.623116899999992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce50c350089753%3A0xdb37b760a84c0e8c!2sAv.%20Roque%20Petroni%20J%C3%BAnior%2C%201089%20-%20Jardim%20das%20Acacias%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004707-000!5e0!3m2!1spt-BR!2sbr!4v1647492824756!5m2!1spt-BR!2sbr" 
+            width="400" 
+            height="250" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy"
+            ></iframe>
+        </div>
+    </div>
+
+    <hr>
+    <footer>
+        <div class="container">
+            <a href="https://www.linkedin.com/in/f%C3%A1bio-ferreira-11135b86/" target="_blank">
+                <img class="tm-social p-30" src="assets/img/linkedin.png" alt="Logo do LinkedIn">
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=100005080686942" target="_blank">
+                <img class="tm-social p-30" src="assets/img/facebook.png" alt="Logo do Facebook">
+            </a>
+            <a href="https://web.whatsapp.com/" target="_blank">
+                <img class="tm-social p-30" src="assets/img/whatsapp.png" alt="Logo do Whatsapp">
+            </a>
+        </div>
+
+        <p class="center">
+            Todos os direitos reservados: Fábio Ferreira &copy;
+        </p>
+    </footer>
     
 </body>
 </html>
